# PrologResurrected

./: .gitignore  .nojekyll  COMPREHENSIVE_ERROR_HANDLING_IMPLEMENTATION.md  LICENSE  README.md  Taskfile.yml  concepts.html  gameplay.html  getting-started.html  index.html  main.py  playwright.config.py  pyproject.toml  robots.txt  run_e2e_tests.py  rxconfig.py  search.json  sitemap.xml
docs/: _quarto.yml  concepts.qmd  gameplay.qmd  getting-started.qmd  index.qmd
game/: error_handling.py  hello_world_puzzle.py  prolog_concepts.py  puzzles.py  story.py  terminal.py  tutorial_content.py
prologresurrected/: __init__.py  prologresurrected.py
tests/: test_adaptive_puzzle_factory.py  test_adaptive_puzzle_integration.py  test_base_puzzle_complexity.py  test_complexity.py  test_complexity_change_functionality.py  test_complexity_config.py  test_complexity_error_handling.py  test_complexity_help.py  test_complexity_help_integration.py  test_complexity_integration_comprehensive.py  test_complexity_level_adaptation.py  test_complexity_manager_config_integration.py  test_complexity_selection_ui.py  test_diagnosis_validator.py  test_error_handling.py  test_error_handling_integration.py  test_final_integration_task18.py  test_gamestate_complexity.py  test_hello_world_complexity_adaptation.py  test_hello_world_integration.py  test_hello_world_integration_with_game.py  test_hello_world_puzzle.py  test_hint_system.py  test_memory_stack_completion_scoring.py  test_memory_stack_data_models.py  test_memory_stack_game_integration.py  test_memory_stack_hint_system.py  test_puzzles.py  (+17 more)
(+59 files in other folders)
