[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prologresurrected"
version = "0.1.0"
description = "Logic Quest - A Prolog Learning Game"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "reflex>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.5.7",
    "playwright>=1.40.0",
    "pytest-playwright>=0.4.0",
    "requests>=2.31.0",
]

[tool.hatch.build.targets.wheel]
packages = ["game"]
